tests/suite/errors/e47_int_overflow.rs
// err: out of range

fn main() {
    let _x = 9223372036854775808;
}
